# executorch

./: .gitmodules  CMakeLists.txt  install_requirements.sh  version.txt
backends/cadence/: CMakeLists.txt
backends/cadence/aot/: functions.yaml  functions_hifi.yaml
backends/cadence/hifi/kernels/: CMakeLists.txt  kernels.cpp  kernels.h
backends/cadence/hifi/operators/: CMakeLists.txt  dequantize_per_tensor.cpp  im2row_out.cpp  op_add.cpp  op_atan2.cpp  op_bitwise_and.cpp  op_bitwise_or.cpp  op_bitwise_xor.cpp  op_bmm.cpp  op_cat.cpp  op_clamp.cpp  op_div.cpp  op_embedding.cpp  op_eq.cpp  op_fmod.cpp  op_full.cpp  op_ge.cpp  op_gelu.cpp  op_gt.cpp  op_hardtanh.cpp  op_le.cpp  op_lt.cpp  op_masked_fill.cpp  op_maximum.cpp  op_mean.cpp  op_minimum.cpp  op_mm.cpp  op_mul.cpp  op_ne.cpp  op_permute_copy.cpp  op_pow.cpp  op_remainder.cpp  op_rsqrt.cpp  op_select_copy.cpp  op_sigmoid.cpp  op_slice_copy.cpp  op_softmax.cpp  op_split_copy.cpp  op_sub.cpp  op_tanh.cpp  (+7 more)
backends/cadence/reference/operators/: CMakeLists.txt  quantized_conv_out.cpp  quantized_matmul_out.cpp
examples/portable/executor_runner/: executor_runner.cpp
extension/runner_util/: inputs_portable.cpp
